CUDA kernel launcher

--- a/myelin/cuda/BUILD
+++ b/myelin/cuda/BUILD
@@ -40,6 +40,7 @@ cc_library(
   hdrs = ["cuda-kernel.h"],
   deps = [
     ":cuda",
+    ":cuda-runtime",
     "//base",
     "//myelin:compute",
   ],
