Myelin step attributes and calculate kernel skeleton

--- a/myelin/kernel/BUILD
+++ b/myelin/kernel/BUILD
@@ -17,11 +17,11 @@ cc_library(
 )
 
 cc_library(
-  name = "calculate",
+  name = "arithmetic",
   srcs = [
-    "calculate.cc",
+    "arithmetic.cc",
   ],
-  hdrs = ["calculate.h"],
+  hdrs = ["arithmetic.h"],
   deps = [
     "//base",
     "//myelin:compute",
