--- a/nlp/parser/BUILD
+++ b/nlp/parser/BUILD
@@ -57,9 +57,7 @@ cc_library(
     "//frame:store",
     "//myelin:compute",
     "//myelin:flow",
-    "//myelin/kernel:avx",
-    "//myelin/kernel:generic",
-    "//myelin/kernel:sse",
+    "//myelin/kernel:tensorflow",
     "//myelin/kernel:dragnn",
     "//nlp/document",
   ],
