--- a/myelin/tests/BUILD
+++ b/myelin/tests/BUILD
@@ -83,6 +83,35 @@ cc_binary(
 )
 
 cc_binary(
+  name = "convert-tagger-flow",
+  srcs = ["convert-tagger-flow.cc"],
+  deps = [
+    "//base",
+    "//file",
+    "//file:posix",
+    "//myelin:flow",
+  ],
+)
+
+cc_binary(
+  name = "lextagger-test",
+  srcs = ["lextagger-test.cc"],
+  deps = [
+    "//base",
+    "//base:clock",
+    "//file",
+    "//file:posix",
+    "//myelin:compute",
+    "//myelin:dictionary",
+    "//myelin:flow",
+    "//myelin:graph",
+    "//myelin:profile",
+    "//myelin/kernel:tensorflow",
+    "//myelin/kernel:dragnn",
+  ],
+)
+
+cc_binary(
   name = "tdozat-test",
   srcs = ["tdozat-test.cc"],
   deps = [
