Initial version of sempar tensorflow converter

--- a/myelin/tests/BUILD
+++ b/myelin/tests/BUILD
@@ -140,3 +140,17 @@ cc_binary(
   ],
 )
 
+cc_binary(
+  name = "sempar-test",
+  srcs = ["sempar-test.cc"],
+  deps = [
+    "//base",
+    "//file:posix",
+    "//myelin:compute",
+    "//myelin:flow",
+    "//myelin:graph",
+    "//myelin:profile",
+    "//myelin/kernel:tensorflow",
+  ],
+)
+
