Cell extraction for sempar tensorflow converter

--- a/myelin/tests/BUILD
+++ b/myelin/tests/BUILD
@@ -150,6 +150,7 @@ cc_binary(
     "//myelin:flow",
     "//myelin:graph",
     "//myelin:profile",
+    "//myelin/kernel:dragnn",
     "//myelin/kernel:tensorflow",
   ],
 )
