Untangle syntaxnet dependencies

--- a/nlp/document/BUILD
+++ b/nlp/document/BUILD
@@ -1,5 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
+proto_library(
+  name = "lexicon-proto",
+  srcs = ["lexicon.proto"],
+)
+
+cc_proto_library(
+  name = "lexicon",
+  deps = ["lexicon-proto"],
+)
+
 cc_library(
   name = "token-breaks",
   hdrs = ["token-breaks.h"],
@@ -95,6 +105,18 @@ cc_library(
     "//frame:store",
     "//string",
     "//util:zip-iterator",
+  ],
+)
+
+cc_library(
+  name = "affix",
+  srcs = ["affix.cc"],
+  hdrs = ["affix.h"],
+  deps = [
+    ":lexicon",
+    "//base",
+    "//util:fingerprint",
+    "//util:unicode",
   ],
 )
 
