Add prefix and suffix tables to parser runtime

--- a/nlp/parser/BUILD
+++ b/nlp/parser/BUILD
@@ -62,6 +62,8 @@ cc_library(
     "//myelin/kernel:dragnn",
     "//myelin/kernel:tensorflow",
     "//nlp/document",
+    "//nlp/document:affix",
+    "//stream:memory",
   ],
 )
 
