Lexical feature extractor

--- a/nlp/document/BUILD
+++ b/nlp/document/BUILD
@@ -106,6 +106,7 @@ cc_library(
     "//base",
     "//stream:input",
     "//stream:output",
+    "//string:text",
     "//util:fingerprint",
     "//util:unicode",
   ],
@@ -120,6 +121,17 @@ cc_library(
     "//base",
     "//stream:memory",
     "//util:vocabulary",
+  ],
+)
+
+cc_library(
+  name = "features",
+  srcs = ["features.cc"],
+  hdrs = ["features.h"],
+  deps = [
+    ":document",
+    ":lexicon",
+    "//util:unicode",
   ],
 )
 
