--- a/tools/BUILD
+++ b/tools/BUILD
@@ -17,3 +17,17 @@ cc_binary(
   ],
 )
 
+cc_binary(
+  name = "shell",
+  srcs = ["shell.cc"],
+  deps = [
+    "//base",
+    "//file:posix",
+    "//frame",
+    "//frame:json",
+    "//schema:feature-structure",
+    "//schema:schemata",
+    "//string",
+  ],
+)
+
