Frame evaluation for parser runtime

--- a/nlp/parser/tests/BUILD
+++ b/nlp/parser/tests/BUILD
@@ -5,10 +5,16 @@ cc_binary(
   srcs = ["parser-test.cc"],
   deps = [
     "//base",
+    "//base:clock",
     "//file:posix",
+    "//frame:object",
+    "//frame:serialization",
     "//nlp/document",
+    "//nlp/document:document-source",
     "//nlp/document:document-tokenizer",
     "//nlp/parser",
+    "//nlp/parser/trainer:frame-evaluation",
+    "//string:printf",
   ],
 )
 
