NVIDIA target mode for Express

--- a/myelin/kernel/BUILD
+++ b/myelin/kernel/BUILD
@@ -90,10 +90,13 @@ cc_library(
     "cuda.cc",
     "cuda-matmul.cc",
     "cuda-operators.cc",
+    "cuda-arithmetic.cc",
   ],
   hdrs = ["cuda.h"],
   deps = [
+    ":arithmetic",
     "//myelin:compute",
+    "//myelin:express",
     "//myelin/cuda:cuda-kernel",
   ],
 )
