Myelin connector placement

--- a/myelin/tests/BUILD
+++ b/myelin/tests/BUILD
@@ -79,8 +79,10 @@ cc_binary(
     "//myelin:flow",
     "//myelin:graph",
     "//myelin:profile",
-    "//myelin/kernel:tensorflow",
+    "//myelin/cuda:cuda-runtime",
+    "//myelin/kernel:cuda",
     "//myelin/kernel:dragnn",
+    "//myelin/kernel:tensorflow",
   ],
 )
 
