--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = third_party/zlib/upstream
 	url = https://github.com/madler/zlib.git
 
+[submodule "third_party/protobuf"]
+	path = third_party/protobuf
+	url = https://github.com/google/protobuf.git
