--- a/myelin/BUILD
+++ b/myelin/BUILD
@@ -85,6 +85,17 @@ cc_library(
 )
 
 cc_library(
+  name = "elf-linker",
+  srcs = ["elf-linker.cc"],
+  hdrs = ["elf-linker.h"],
+  deps = [
+    ":compute",
+    "//base",
+    "//tools:elf-writer",
+  ],
+)
+
+cc_library(
   name = "dictionary",
   srcs = ["dictionary.cc"],
   hdrs = ["dictionary.h"],
@@ -99,6 +110,7 @@ cc_binary(
   srcs = ["analyze.cc"],
   deps = [
     ":compute",
+    ":elf-linker",
     ":flow",
     ":graph",
     ":profile",
