Update Travis build config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 dist: trusty
-language: cpp
+language:
+  - cpp
+  - python
 compiler: gcc
+python: "2.7"
 
 addons:
   apt:
@@ -10,6 +13,10 @@ addons:
       - wget
       - pkg-config
       - g++-4.8
+
+install:
+  - sudo pip install protobuf==3.4.0
+  - sudo pip install https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-1.4.0-cp27-none-linux_x86_64.whl
 
 before_install:
   - wget https://github.com/bazelbuild/bazel/releases/download/0.8.0/bazel_0.8.0-linux-x86_64.deb
