Add constant for binary marker

--- a/sling/frame/BUILD
+++ b/sling/frame/BUILD
@@ -134,6 +134,7 @@ cc_library(
     ":printer",
     ":reader",
     ":store",
+    ":wire",
     "//sling/base",
     "//sling/file",
     "//sling/stream",
