--- a/sling/workflow/BUILD
+++ b/sling/workflow/BUILD
@@ -10,7 +10,7 @@ cc_library(
     "//sling/string:strip",
     "//sling/string:text",
     "//sling/task",
-    "//sling/task:container",
+    "//sling/task:job",
   ],
 )
 
@@ -22,7 +22,7 @@ cc_binary(
     "//sling/base",
     "//sling/file:posix",
     "//sling/nlp/wiki:wikidata-importer",
-    "//sling/task:container",
+    "//sling/task:job",
     "//sling/task:record-file-writer",
     "//sling/task:sharder",
     "//sling/task:text-file-reader",
@@ -39,8 +39,8 @@ cc_binary(
     "//sling/file:posix",
     "//sling/nlp/wiki:wiki",
     "//sling/task:accumulator",
-    "//sling/task:container",
     "//sling/task:frames",
+    "//sling/task:job",
     "//sling/task:record-file-reader",
     "//sling/task:sharder",
     "//sling/task:sorter",
@@ -57,8 +57,8 @@ cc_binary(
     "//sling/base",
     "//sling/file:posix",
     "//sling/nlp/wiki:wikidata-importer",
-    "//sling/task:container",
     "//sling/task:frame-store-builder",
+    "//sling/task:job",
     "//sling/task:record-file-reader",
   ],
 )
@@ -71,8 +71,8 @@ cc_binary(
     "//sling/base",
     "//sling/file:posix",
     "//sling/nlp/wiki:wikipedia-importer",
-    "//sling/task:container",
     "//sling/task:frame-store-builder",
+    "//sling/task:job",
     "//sling/task:sharder",
     "//sling/task:record-file-writer",
   ],
@@ -86,9 +86,9 @@ cc_binary(
     "//sling/base",
     "//sling/file:posix",
     "//sling/nlp/wiki:wikipedia-profiles",
-    "//sling/task:container",
-    "//sling/task:record-file-reader",
+    "//sling/task:job",
     "//sling/task:frames",
+    "//sling/task:record-file-reader",
     "//sling/task:record-file-writer",
     "//sling/task:sharder",
     "//sling/task:sorter",
@@ -103,10 +103,10 @@ cc_binary(
     ":common",
     "//sling/base",
     "//sling/file:posix",
-    "//sling/task:container",
     "//sling/task:frame-store-builder",
     "//sling/task:frame-store-reader",
     "//sling/task:frames",
+    "//sling/task:job",
     "//sling/task:record-file-reader",
   ],
 )
@@ -119,7 +119,7 @@ cc_binary(
     "//sling/base",
     "//sling/file:posix",
     "//sling/nlp/wiki:profile-aliases",
-    "//sling/task:container",
+    "//sling/task:job",
     "//sling/task:record-file-reader",
     "//sling/task:record-file-writer",
     "//sling/task:sharder",
@@ -135,7 +135,7 @@ cc_binary(
     "//sling/base",
     "//sling/file:posix",
     "//sling/nlp/wiki:name-table-builder",
-    "//sling/task:container",
+    "//sling/task:job",
     "//sling/task:record-file-reader",
   ],
 )
@@ -156,11 +156,11 @@ cc_binary(
     "//sling/string:split",
     "//sling/string:strip",
     "//sling/task:accumulator",
-    "//sling/task:container",
+    "//sling/task:job",
     "//sling/task:sharder",
     "//sling/task:sorter",
-    "//sling/task:workers",
     "//sling/task:text-map-writer",
+    "//sling/task:workers",
     "//sling/util:unicode",
     "//sling/web:html-parser",
     "//sling/web:rfc822-headers",
@@ -176,13 +176,13 @@ cc_binary(
     ":common",
     "//sling/base",
     "//sling/file:posix",
-    "//sling/task:container",
+    "//sling/task:frames",
+    "//sling/task:job",
     "//sling/task:record-file-writer",
     "//sling/task:record-file-reader",
-    "//sling/task:frames",
-    "//sling/task:task",
     "//sling/task:sharder",
     "//sling/task:sorter",
+    "//sling/task:task",
   ],
 )
 
