Workflow dashboard status API

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -27,9 +27,11 @@ cc_library(
     "//sling/file",
     "//sling/file:recordio",
     "//sling/frame",
+    "//sling/http:http-server",
     "//sling/nlp/document",
     "//sling/nlp/document:document-tokenizer",
     "//sling/nlp/parser",
+    "//sling/task:dashboard",
     "//sling/task:job",
     "//sling/stream:file",
     "//sling/stream:unix-file",
