--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -8,6 +8,7 @@ cc_library(
     "pybase.cc",
     "pyframe.cc",
     "pyparser.cc",
+    "pyphrase.cc",
     "pyrecordio.cc",
     "pystore.cc",
     "pytask.cc",
@@ -17,6 +18,7 @@ cc_library(
     "pybase.h",
     "pyframe.h",
     "pyparser.h",
+    "pyphrase.h",
     "pyrecordio.h",
     "pystore.h",
     "pytask.h",
@@ -29,7 +31,9 @@ cc_library(
     "//sling/frame",
     "//sling/http:http-server",
     "//sling/nlp/document",
+    "//sling/nlp/wiki:phrase-table",
     "//sling/nlp/document:document-tokenizer",
+    "//sling/nlp/document:phrase-tokenizer",
     "//sling/nlp/parser",
     "//sling/task:dashboard",
     "//sling/task:job",
@@ -49,6 +53,7 @@ cc_library(
     "//sling/nlp/wiki:wikipedia-importer",
     "//sling/nlp/wiki:wikipedia-documents",
     "//sling/nlp/wiki:name-table-builder",
+    "//sling/nlp/wiki:phrase-table-builder",
 
     "//sling/task:frame-store-reader",
     "//sling/task:frame-store-writer",
