Document processor and text map writer

--- a/sling/task/BUILD
+++ b/sling/task/BUILD
@@ -278,6 +278,16 @@ cc_library(
 )
 
 cc_library(
+  name = "documents",
+  srcs = ["documents.cc"],
+  hdrs = ["documents.h"],
+  deps = [
+    ":frames",
+    "//sling/nlp/document",
+  ],
+)
+
+cc_library(
   name = "rekey",
   srcs = ["rekey.cc"],
   deps = [
