--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -7,6 +7,7 @@ cc_library(
     "pyarray.cc",
     "pybase.cc",
     "pyframe.cc",
+    "pymisc.cc",
     "pyparser.cc",
     "pyphrase.cc",
     "pyrecordio.cc",
@@ -17,6 +18,7 @@ cc_library(
     "pyarray.h",
     "pybase.h",
     "pyframe.h",
+    "pymisc.h",
     "pyparser.h",
     "pyphrase.h",
     "pyrecordio.h",
