Word embedding training

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -5,9 +5,14 @@ cc_library(
   srcs = ["vocabulary.cc"],
   deps = [
     "//sling/base",
+    "//sling/file:recordio",
     "//sling/file:textmap",
+    "//sling/nlp/document",
+    "//sling/frame:serialization",
     "//sling/task:accumulator",
     "//sling/task:documents",
+    "//sling/task:process",
+    "//sling/util:thread",
     "//sling/util:unicode",
   ],
   alwayslink = 1,
