Myelin-based word embedding trainer

--- a/sling/nlp/embedding/BUILD
+++ b/sling/nlp/embedding/BUILD
@@ -7,6 +7,10 @@ cc_library(
     "//sling/base",
     "//sling/file:recordio",
     "//sling/file:textmap",
+    "//sling/myelin:builder",
+    "//sling/myelin:compute",
+    "//sling/myelin:flow",
+    "//sling/myelin/kernel:tensorflow",
     "//sling/nlp/document",
     "//sling/frame:serialization",
     "//sling/task:accumulator",
