Compile tagger gradient function

--- a/sling/myelin/tests/BUILD
+++ b/sling/myelin/tests/BUILD
@@ -94,6 +94,7 @@ cc_binary(
     "//sling/file:posix",
     "//sling/myelin:builder",
     "//sling/myelin:compute",
+    "//sling/myelin:elf-linker",
     "//sling/myelin:gradient",
     "//sling/myelin:flow",
     "//sling/myelin:graph",
